Extract createAction method in ActionFactory