@@ -9,7 +9,6 @@ import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Modifier;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class ActionFactory {
     private final Reflections reflections;
@@ -21,16 +20,9 @@ public class ActionFactory {
     public List<Action> createAllActions(final Game game, final Player executingPlayer) {
         return this.reflections.getSubTypesOf(Action.class).stream()
                 .filter(clazz -> isValidActionClass(clazz, executingPlayer))
-                .map(clazz -> {
-                    try {
-                        final Constructor<? extends Action> constructor = clazz.getConstructor(Game.class, Player.class);
-                        return constructor.newInstance(game, executingPlayer);
-                    } catch (final NoSuchMethodException | InvocationTargetException | InstantiationException | IllegalAccessException ignored) {
-                    }
-                    return null;
-                })
+                .map(clazz -> createAction(clazz, game, executingPlayer))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private boolean isValidActionClass(final Class<? extends Action> actionClass, final Player player) {
@@ -38,5 +30,14 @@ public class ActionFactory {
                 (IGeneralAction.class.isAssignableFrom(actionClass) && !player.getRole().getAbility().getRemovedGeneralActions().contains(actionClass.getName())) ||
                 (IRoleAction.class.isAssignableFrom(actionClass) && player.getRole().getAbility().getAdditionalRoleActions().contains(actionClass.getName()))
         );
+    }
+
+    private <A extends Action> Action createAction(final Class<A> clazz, final Game game, final Player executingPlayer) {
+        try {
+            final Constructor<A> constructor = clazz.getConstructor(Game.class, Player.class);
+            return constructor.newInstance(game, executingPlayer);
+        } catch (final NoSuchMethodException | InvocationTargetException | InstantiationException | IllegalAccessException ignored) {
+            return null;
+        }
     }
 }
